# Yalab-RRT

./: .gitignore  .replit  9999_phase2.csv  DS.py  RTT.py  app.py  globals.py  pyproject.toml  read.py  yalab-rrt-key.json
static/: DS_logic.js  DS_styles.css  Multiple RTT.csv  RTT_script.js  RTT_style.css  Singular RTT.csv  participants.xlsx  requirements.txt  stroop_logic.js  stroop_styles.css
templates/: DS_index.html  RTT_index.html  RTT_instructions_1.html  RTT_instructions_2.html  RTT_phase_1.html  RTT_phase_2.html  RTT_practice_1.html  RTT_practice_2.html  RTT_success.html  index.html  instructions.html  instructions2.html  phase1.html  phase2.html  practice1.html  practice2.html  stroop_index.html  stroop_instruction.html
